--- a/scss/components/_medium_typography.scss
+++ b/scss/components/_medium_typography.scss
@@ -71,7 +71,7 @@
 	}
 
 	/*article,*/
-	.medium-content, .site-loop-base.medium-content {
+	.medium-content {
 
 		@include medium-paragraph;
 
