--- a/scss/components/_wp-gutenberg.scss
+++ b/scss/components/_wp-gutenberg.scss
@@ -258,6 +258,7 @@
 			img {
 				width: 100%;
 				max-height: 100vh;
+				object-fit: cover;
 			}
 		}
 
@@ -292,6 +293,14 @@
 			text-align: center;
 		}
 
+	}
+
+
+	.wp-block-image figcaption {
+		text-align: center;
+		font-size: px2rem(14);
+		color: $vanilla-alt-text-color;
+		line-height: 1.2;
 	}
 
 
